// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queried-for mount fails when the actual does not match the expected 1`] = `
"expected
<div>
  <div class=\\"old friendly\\" id=\\"parent\\"><div id=\\"child\\">Children</div></div>
</div>
queried for '#parent' to satisfy <div><div id=\\"child\\">Foo</div></div>
  expected <div class=\\"old friendly\\" id=\\"parent\\"><div id=\\"child\\">Children</div></div>
  to satisfy <div><div id=\\"child\\">Foo</div></div>

  <div id=\\"parent\\" className=\\"old friendly\\">
    <div id=\\"child\\">
      Children // -Children
               // +Foo
    </div>
  </div>"
`;

exports[`queried-for shallow fails when the actual does not match the expected 1`] = `
"expected
<div>
  <div id=\\"parent\\" className=\\"old friendly\\">
    <div id=\\"child\\">Children</div>
  </div>
</div>
queried for '#parent' to satisfy <div><div id=\\"child\\">Foo</div></div>
  expected
  <div id=\\"parent\\" className=\\"old friendly\\">
    <div id=\\"child\\">Children</div>
  </div>
  to satisfy <div><div id=\\"child\\">Foo</div></div>

  <div id=\\"parent\\" className=\\"old friendly\\">
    <div id=\\"child\\">
      Children // -Children
               // +Foo
    </div>
  </div>"
`;
